# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./users";
 export * from "./menu";
 export * from "./coupons";
 export * from "./orders";
+export * from "./settings";
